AVRO-2722 Move the 'random' variable to be local to the method where it is being used

This avoids thread-safety issues.